[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Item_Script.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Item_BaseNode" type="Node2D"]

script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

visible = false
frames = SubResource( 1 )
animation = "default"

[node name="Item_Collision" type="Area2D" parent="." index="1"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
collision_mask = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Item_Collision" index="0"]

position = Vector2( -1.42001, 0.682463 )
scale = Vector2( 2.69377, 2.55749 )
shape = SubResource( 2 )

[node name="Icon_Sprite" type="Sprite" parent="." index="2"]

visible = false
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="Label" type="Label" parent="." index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -20.0
margin_top = -60.0
margin_right = 20.0
margin_bottom = -29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Pick E"
align = 1
valign = 1
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility" ]

[connection signal="area_shape_entered" from="Item_Collision" to="." method="_on_Item_Collision_area_shape_entered"]

[connection signal="area_shape_exited" from="Item_Collision" to="." method="_on_Item_Collision_area_shape_exited"]


